// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableOfContent component renders anchor correctly without the context  1`] = `
<div>
  <div
    id="div with text"
    style="margin-top: -150px; padding-top: 150px;"
  >
    <h2>
      section with text
    </h2>
    <p>
      Lorem ipsum dolor sit amet.
    </p>
  </div>
</div>
`;

exports[`TableOfContent component renders correctly 1`] = `
<div
  class="TOC"
>
  <div>
    <div
      class="link"
    >
      <span>
        div with text
         - 
        div-with-text
      </span>
    </div>
    <div
      class="link"
    >
      <span>
        div with single paragraph
         - 
        div-with-single-paragraph
      </span>
    </div>
  </div>
  <div
    id="div-with-text"
    style="margin-top: -150px; padding-top: 150px;"
  >
    <h2>
      section with text
    </h2>
    <p>
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem, enim.
    </p>
  </div>
  <div
    id="div-with-single-paragraph"
    style="margin-top: -150px; padding-top: 150px;"
  >
    <h2>
      section with single paragraph
    </h2>
    <p>
      Lorem ipsum dolor sit, amet consectetur adipisicing.
    </p>
  </div>
</div>
`;

exports[`TableOfContent component renders correctly with default value of renderLink being undefined 1`] = `
<div>
  <div
    class="TOC"
  >
    <div>
      <div
        class="link"
      />
      <div
        class="link"
      />
    </div>
    <div
      id="div-with-text"
      style="margin-top: -150px; padding-top: 150px;"
    >
      <h2>
        section with text
      </h2>
      <p>
        Lorem ipsum dolor sit amet.
      </p>
    </div>
    <div
      id="div-with-single-paragraph"
      style="margin-top: -150px; padding-top: 150px;"
    >
      <h2>
        section with single paragraph
      </h2>
      <p>
        Lorem ipsum dolor sit amet consectetur.
      </p>
    </div>
  </div>
</div>
`;
